# OSCPPTools

./: .travis.yml  CMakeLists.txt  OSDevToolsConfig.cmake  README.md
include/: OSTools.h  env.h
src/: OSTools.cpp  env.cpp
